Thiago/implementacoes (#3)
* 2.16 ajustes de cpf, compra com lock e testes

* feat: implementações Thiago - merge com main do Pedro

* feat: implementa expiração de pontos XP (11.3.1 e 11.3.2)

- PontuacaoUsuario: adiciona campo dataExpiracao, renovado em +1 ano a cada ganho de XP
- GamificacaoService: define dataExpiracao na criação inicial do registro
- PontuacaoUsuarioRepository: queries findExpirados() e findAVencer()
- PontosSchedulerService: limpeza diária (meia-noite) de XP vencido com log de auditoria
  e aviso prévio (09h) por e-mail + dashboard para XP a vencer em 30 dias

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: login unificado, segurança de cupons e tela admin de cupons

Login unificado (/clientes/login):
- ClientController detecta admin ou cliente pelo e-mail automaticamente
- Admin loga direto sem verificar email_verificado; cliente verifica
- /entrar redireciona para /clientes/login (links existentes preservados)
- Logout admin atualizado para /clientes/login?logout

Segurança - endpoint de cupons admin:
- POST /api/cupons/admin movido para POST /api/admin/cupons
- Agora coberto pelo ADMIN_ROUTES do SecurityConfig (era acessível por qualquer usuário)

Tela de gerenciamento de cupons (/admin/cupons):
- Cards de stats: Total, Disponíveis, Utilizados, Expirados
- Tabela com código, tipo, valor, cliente, datas e status
- Busca em tempo real por código/cliente, filtros por tipo e status
- Modal para criar cupom promocional (público ou direcionado)
- Invalidação manual com confirmação e toast de feedback
- Item "Cupons" adicionado ao sidebar admin
- Novos arquivos: cupons.html, cupons.css, cupons.js

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: restaurar ícone olho mostrar/ocultar senha no login

- login_cliente.html: campo senha envolto em .input-senha-wrapper + botão .btn-toggle-senha com SVG
- login_cliente.css: estilos do wrapper e botão toggle
- login_cliente.js: função toggleSenhaLogin (IIFE isolada)

Co